# platform.core.system.libdbuspolicy

./: Makefile.am  README  configure.ac  project.config
packaging/: libdbuspolicy.spec
src/: .gitignore  libdbuspolicy1-private.h  libdbuspolicy1.c  libdbuspolicy1.pc.in  libdbuspolicy1.sym  test-libdbuspolicy1-method.cpp  test-libdbuspolicy1-ownership.cpp  test-libdbuspolicy1-signal.cpp
src/dbuspolicy1/: libdbuspolicy1.h
src/internal/: cynara.cpp  cynara.hpp  cynara_mockup.cpp  internal.cpp  internal.h  libdbuspolicy1-private.hpp  naive_policy_checker.cpp  naive_policy_checker.hpp  naive_policy_db.cpp  naive_policy_db.hpp  policy.cpp  policy.hpp  timer.hpp  tslog.cpp  tslog.hpp  xml_parser.cpp  xml_parser.hpp  xml_policy.hpp
tests/: system.conf
tests/system.d/: cynara.test.conf  methods.test.conf  ownerships.test.conf  signals.test.conf
